--- a/_config.yml
+++ b/_config.yml
@@ -22,4 +22,4 @@ google_analytics: false
 google_analytics_id: UA-XXXXXXXX-X
 jquery_version: 1.9.0
 
-footer: "Chris Cardio"
+footer: "Chris Schieffer"
