--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -7,51 +7,67 @@
 #       active: "this is the category, keeps the nav bar section highlighted"
 
 - name: <i class="fa fa-home fa-lg"></i>
-  url: '/chris-cardio/'
+  url: '/'
 
-- name: "Events"
-  url: "/events"
-  active: "events"
-  child_links:
-    - name: "Categories"
-      url: "/categories"
-      active: "events"
-    - name: "Locations"
-      url: "/locations"
-      active: "events"
-    - name: "My Bookings"
-      url: "/bookings"
-      active: "events"
+- name: "About"
+  url: "/#about"
+  active: "about"
 
-- name: "Photo Gallery"
-  url: "/photo-gallery"
-  active: "photo-gallery"
+- name: "Services"
+  url: "/#services"
+  active: "services"
 
-- name: "Posts"
-  url: "/posts"
-  active: "posts"
+- name: "Pricing"
+  url: "/#pricing"
+  active: "pricing"
 
-- name: "Prices"
-  url: "/prices"
-  active: "prices"
+- name: "Contact"
+  url: "/#contact"
+  active: "contact"
 
-- name: "Workout Programs"
-  url: "/workout-programs"
-  active: "blog"
-  child_links:
-    - name: "TRX Suspension Training"
-      url: "/trx-suspension"
-      active: "workout-programs"
-    - name: "Cardio &amp; Sports Drill Boot Camps"
-      url: "/cardio-sports"
-      active: "workout-programs"
-    - name: "High Intensity Interval Training (HIIT)"
-      url: "/high-intensity-interval-training"
-      active: "workout-programs"
-    - name: "Prenatal Excercise"
-      url: "/prenatal-excercise"
-      active: "workout-programs"
+# - name: "Events"
+#   url: "/events"
+#   active: "events"
+#   child_links:
+#     - name: "Categories"
+#       url: "/categories"
+#       active: "events"
+#     - name: "Locations"
+#       url: "/locations"
+#       active: "events"
+#     - name: "My Bookings"
+#       url: "/bookings"
+#       active: "events"
 
-- name: "Shopping"
-  url: "/shopping"
-  active: "shopping"
+# - name: "Photo Gallery"
+#   url: "/photo-gallery"
+#   active: "photo-gallery"
+
+# - name: "Posts"
+#   url: "/posts"
+#   active: "posts"
+
+# - name: "Prices"
+#   url: "/prices"
+#   active: "prices"
+
+# - name: "Workout Programs"
+#   url: "/workout-programs"
+#   active: "blog"
+#   child_links:
+#     - name: "TRX Suspension Training"
+#       url: "/trx-suspension"
+#       active: "workout-programs"
+#     - name: "Cardio &amp; Sports Drill Boot Camps"
+#       url: "/cardio-sports"
+#       active: "workout-programs"
+#     - name: "High Intensity Interval Training (HIIT)"
+#       url: "/high-intensity-interval-training"
+#       active: "workout-programs"
+#     - name: "Prenatal Excercise"
+#       url: "/prenatal-excercise"
+#       active: "workout-programs"
+
+# - name: "Shopping"
+#   url: "/shopping"
+#   active: "shopping"
